--- a/code_alongs/10_dictionary/10_dictionary.ipynb
+++ b/code_alongs/10_dictionary/10_dictionary.ipynb
@@ -147,12 +147,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65772b82",
+   "metadata": {},
+   "source": [
+    "##### Iterate over a dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1dbd1d31",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# \n",
+    "words = {\n",
+    "         \"data structure\": \"means of storing data\",\n",
+    "         \"regression\": \"a function to best fit the data\",\n",
+    "         \"method\": \"a function that belongs to an object\"    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d4899e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: data structure\n",
+      "Value: means of storing data\n",
+      "-------\n",
+      "Key: regression\n",
+      "Value: a function to best fit the data\n",
+      "-------\n",
+      "Key: method\n",
+      "Value: a function that belongs to an object\n",
+      "-------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterative over both keys and values\n",
+    "for key, value in words.items():\n",
+    "    print(f\"Key: {key}\")\n",
+    "    print(f\"Value: {value}\")\n",
+    "    print(\"-------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9a6746ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: data structure\n",
+      "-------\n",
+      "Key: regression\n",
+      "-------\n",
+      "Key: method\n",
+      "-------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterative over keys\n",
+    "for key in words.keys():\n",
+    "    print(f\"Key: {key}\")\n",
+    "    print(\"-------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4582b0f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value: means of storing data\n",
+      "-------\n",
+      "Value: a function to best fit the data\n",
+      "-------\n",
+      "Value: a function that belongs to an object\n",
+      "-------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterative over values\n",
+    "for value in words.values():\n",
+    "    print(f\"Value: {value}\")\n",
+    "    print(\"-------\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5e28ddb",
+   "metadata": {},
+   "source": [
+    "##### Dictionary comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2dbe470f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'F': 0, 'E': 10, 'D': 20, 'C': 30, 'B': 40, 'A': 50}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# more compact and cleaner way to create a dictionary\n",
+    "# we want to produce a dictionary called grade_limit\n",
+    "\n",
+    "#create this dictionary from scratch\n",
+    "grade_limit = {\n",
+    "              \"F\" : 0,\n",
+    "              \"E\" : 10,\n",
+    "              \"D\" : 20,\n",
+    "              \"C\" : 30,\n",
+    "              \"B\" : 40,\n",
+    "              \"A\" : 50\n",
+    "}\n",
+    "print(grade_limit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42fe5de4",
+   "metadata": {},
+   "source": [
+    "##### Create same dictionary but with dictionary comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "dbf2db97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'F': 0, 'E': 10, 'D': 20, 'C': 30, 'B': 40, 'A': 50}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check out the loop that will be used inside the dictionary comprehension\n",
+    "grade_limit = {grade: i*10 for i, grade in enumerate(\"FEDCBA\")} \n",
+    "# look at the dictionarynow\n",
+    "grade_limit"
+   ]
   }
  ],
  "metadata": {
