finished OOP fundamentals in class

--- a/code_alongs/13_oop_fundamentals/13_oop_fundamentals.ipynb
+++ b/code_alongs/13_oop_fundamentals/13_oop_fundamentals.ipynb
@@ -188,6 +188,186 @@
    "cell_type": "markdown",
    "id": "f47226cd",
    "metadata": {},
+   "source": [
+    "# code along in class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1cc435cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dunder init running\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'STI'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# oop fundamentals\n",
+    "\n",
+    "class Admission: # define a class named Admission\n",
+    "# this method will be run when you instantiate an object from this class\n",
+    "    def __init__(self, school, name, program = \"Cool program\"): # dunder init - initializer - note 2 underscores before and after init\n",
+    "        print(\"dunder init running\")\n",
+    "\n",
+    "       #set the attributes to the values from the arguments\n",
+    "        self.school = school\n",
+    "        self.name = name\n",
+    "        self.program = program\n",
+    "\n",
+    "# instantiate the instance that is from type Admission\n",
+    "person1 = Admission(\"STI\", \"Ceda\")\n",
+    "person1.school"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0ef078f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Cool program'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person1.program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "da98ad8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dunder init running\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Java'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person2 = Admission(name = \"Johnny\", school = \"Cool school\", program = \"Java\")\n",
+    "person2.program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "419c31bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student(name = Marcus, age = 43, type_of_study = Full-time, Pass = True, school = STI)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self, name, age, type_of_study, Pass, school):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.type_of_study = type_of_study\n",
+    "        self.Pass = Pass\n",
+    "        self.school = school\n",
+    "\n",
+    "    def study(self):\n",
+    "        print(f\"{self.name} is studying {self.type_of_study} at {self.school}\")\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Student(name = {self.name}, age = {self.age}, type_of_study = {self.type_of_study}, Pass = {self.Pass}, school = {self.school})\"\n",
+    "\n",
+    "\n",
+    "student1 = Student(\"Christoffer\", 37, \"Full-time\", True, \"STI\",)\n",
+    "student2 = Student(\"Marcus\", 43, \"Full-time\", True, \"STI\",)\n",
+    "student3 = Student(\"Karin\", 37, \"None\", False, \"None\",)\n",
+    "\n",
+    "student2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "177c5708",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This school contains of Christoffer, Marcus, Karin\n",
+      "The ages are: 37, 43, 37\n",
+      "The types of study are: Full-time, Full-time, None\n",
+      "Pass status: True, True, False\n",
+      "The schools are: STI, STI, None\n",
+      "This means that Karin is falsely input as a student because she did not pass and is not studying at any school.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Student(name = Karin, age = 37, type_of_study = None, Pass = False, school = None)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f\"This school contains of {student1.name}, {student2.name}, {student3.name}\")\n",
+    "print(f\"The ages are: {student1.age}, {student2.age}, {student3.age}\")\n",
+    "print(f\"The types of study are: {student1.type_of_study}, {student2.type_of_study}, {student3.type_of_study}\")\n",
+    "print(f\"Pass status: {student1.Pass}, {student2.Pass}, {student3.Pass}\")\n",
+    "print(f\"The schools are: {student1.school}, {student2.school}, {student3.school}\")\n",
+    "print(\"This means that Karin is falsely input as a student because she did not pass and is not studying at any school.\")\n",
+    "\n",
+    "student3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42b267d0",
+   "metadata": {},
    "source": []
   }
  ],
