--- a/code_alongs/13_oop_fundamentals/13_oop_encapsulation.ipynb
+++ b/code_alongs/13_oop_fundamentals/13_oop_encapsulation.ipynb
@@ -317,6 +317,90 @@
    "id": "39676b3a",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "6a2fbcde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500000\n",
+      "605000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self, name, social_security_nr, salary, role, employment_year):\n",
+    "        self._name = name\n",
+    "        self._social_security_nr = social_security_nr\n",
+    "        self._salary = salary\n",
+    "        self._role = role\n",
+    "        self._employment_year = employment_year\n",
+    "\n",
+    "    @property\n",
+    "    def name(self):\n",
+    "        return self._name\n",
+    "\n",
+    "    @property\n",
+    "    def social_security_nr(self):\n",
+    "        return self._social_security_nr\n",
+    "\n",
+    "    @property\n",
+    "    def     salary(self):\n",
+    "        return self._salary\n",
+    "\n",
+    "    @salary.setter\n",
+    "    def salary(self, new_salary):\n",
+    "        if not isinstance(new_salary, (int, float)):\n",
+    "            raise TypeError(\"salary must be a number\")\n",
+    "        if not new_salary > 0:\n",
+    "            raise ValueError(\"salary must be positive\")\n",
+    "        if new_salary > 10_000_000:\n",
+    "            raise ValueError(\"salary is too high\")\n",
+    "        self._salary = new_salary\n",
+    "\n",
+    "    def increase_salary(self, value):\n",
+    "        if not isinstance(value, (int, float)):\n",
+    "            raise TypeError(\"value must be a number\")\n",
+    "        if not value > 0:\n",
+    "            raise ValueError(\"value must be positive\")\n",
+    "        if value > 100_000:\n",
+    "            raise ValueError(\"value is too high\")\n",
+    "        self._salary += value\n",
+    "\n",
+    "    @property\n",
+    "    def role(self):\n",
+    "        return self._role\n",
+    "\n",
+    "    @property\n",
+    "    def employment_year(self):\n",
+    "        return self._employment_year\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return (f\"Employee('{self._name}', '{self._social_security_nr}', \"\n",
+    "                f\"{self._salary}, '{self._role}', {self._employment_year})\")\n",
+    "\n",
+    "emp1 = Employee(\"Christoffer\", \"19751212-1234\", 500000, \"Developer\", 2020)\n",
+    "emp1\n",
+    "\n",
+    "print(emp1.salary)\n",
+    "emp1.salary = 600000\n",
+    "emp1.increase_salary(5000)\n",
+    "print(emp1.salary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4401de36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
