--- a/code_alongs/13_oop_fundamentals/13_oop_encapsulation.ipynb
+++ b/code_alongs/13_oop_fundamentals/13_oop_encapsulation.ipynb
@@ -319,8 +319,16 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "264c1faf",
+   "metadata": {},
+   "source": [
+    "## documentation and type hinting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "id": "6a2fbcde",
    "metadata": {},
    "outputs": [
@@ -329,21 +337,51 @@
      "output_type": "stream",
      "text": [
       "500000\n",
-      "605000\n"
+      "605000\n",
+      "Employee Christoffer, SSN: 19880202-1234, Salary: 605000, Role: Developer, Employment Year: 2025\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "A class to hold employee information\n",
+    "\n",
+    "Attributes:\n",
+    "- name: str - name of the person\n",
+    "- social_security_nr: int - social security number in the format YYYYMMDD-XXXX\n",
+    "- salary: int - salary of the person\n",
+    "- role: str - role of the person\n",
+    "- employment_year: int - year of employment\n",
+    "...\n",
+    "\n",
+    "Methods:\n",
+    "- increase_salary(value: int) - increase the salary by value\n",
+    "\n",
+    "Example usage:\n",
+    ">>> emp1 = Employee(\"Christoffer\", \"19880202-1234\", 500000, \"Developer\", 2025)\n",
+    ">>> emp1.increase_salary(5000)\n",
+    ">>> emp1.salary\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "# Example: Employee class with encapsulation\n",
     "class Employee:\n",
-    "    def __init__(self, name, social_security_nr, salary, role, employment_year):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        name: str,\n",
+    "        social_security_nr: str,\n",
+    "        salary: int,\n",
+    "        role: str,\n",
+    "        employment_year: int,\n",
+    "    ):  # 5 attributes\n",
     "        self._name = name\n",
     "        self._social_security_nr = social_security_nr\n",
     "        self._salary = salary\n",
     "        self._role = role\n",
     "        self._employment_year = employment_year\n",
     "\n",
-    "    @property\n",
-    "    def name(self):\n",
+    "    @property  # getter\n",
+    "    def name(self):  # read-only\n",
     "        return self._name\n",
     "\n",
     "    @property\n",
@@ -351,27 +389,27 @@
     "        return self._social_security_nr\n",
     "\n",
     "    @property\n",
-    "    def     salary(self):\n",
+    "    def salary(self):\n",
     "        return self._salary\n",
     "\n",
-    "    @salary.setter\n",
-    "    def salary(self, new_salary):\n",
+    "    @salary.setter  # setter\n",
+    "    def salary(self, new_salary):  # validate before setting\n",
     "        if not isinstance(new_salary, (int, float)):\n",
-    "            raise TypeError(\"salary must be a number\")\n",
+    "            raise TypeError(\"salary must be a number\")  # type check\n",
     "        if not new_salary > 0:\n",
-    "            raise ValueError(\"salary must be positive\")\n",
+    "            raise ValueError(\"salary must be positive\")  # value check\n",
     "        if new_salary > 10_000_000:\n",
-    "            raise ValueError(\"salary is too high\")\n",
-    "        self._salary = new_salary\n",
+    "            raise ValueError(\"salary is too high\")  # sanity check\n",
+    "        self._salary = new_salary  # set the new salary\n",
     "\n",
-    "    def increase_salary(self, value):\n",
+    "    def increase_salary(self, value):  # method to increase salary\n",
     "        if not isinstance(value, (int, float)):\n",
     "            raise TypeError(\"value must be a number\")\n",
     "        if not value > 0:\n",
     "            raise ValueError(\"value must be positive\")\n",
     "        if value > 100_000:\n",
     "            raise ValueError(\"value is too high\")\n",
-    "        self._salary += value\n",
+    "        self._salary += value  # increase the salary\n",
     "\n",
     "    @property\n",
     "    def role(self):\n",
@@ -381,23 +419,103 @@
     "    def employment_year(self):\n",
     "        return self._employment_year\n",
     "\n",
-    "    def __repr__(self):\n",
-    "        return (f\"Employee('{self._name}', '{self._social_security_nr}', \"\n",
-    "                f\"{self._salary}, '{self._role}', {self._employment_year})\")\n",
+    "    def __str__(self):  # user-friendly string representation\n",
+    "        return (\n",
+    "            f\"Employee {self._name}, SSN: {self._social_security_nr}, \"\n",
+    "            f\"Salary: {self._salary}, Role: {self._role}, \"\n",
+    "            f\"Employment Year: {self._employment_year}\"\n",
+    "        )\n",
     "\n",
-    "emp1 = Employee(\"Christoffer\", \"19751212-1234\", 500000, \"Developer\", 2020)\n",
+    "    def __repr__(self):  # unambiguous string representation\n",
+    "        return (\n",
+    "            f\"Employee('{self._name}', '{self._social_security_nr}', \"\n",
+    "            f\"{self._salary}, '{self._role}', {self._employment_year})\"\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "emp1 = Employee(\n",
+    "    \"Christoffer\", \"19880202-1234\", 500000, \"Developer\", 2025\n",
+    ")  # create an Employee instance\n",
     "emp1\n",
     "\n",
-    "print(emp1.salary)\n",
-    "emp1.salary = 600000\n",
-    "emp1.increase_salary(5000)\n",
-    "print(emp1.salary)"
+    "print(emp1.salary)  # access salary using getter\n",
+    "emp1.salary = 600000  # set salary using setter\n",
+    "emp1.increase_salary(5000)  # increase salary using method\n",
+    "print(emp1.salary)  # access updated salary\n",
+    "print(emp1)  # user-friendly string representation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4401de36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Employee()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "c69e5554",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class Employee in module __main__:\n",
+      "\n",
+      "class Employee(builtins.object)\n",
+      " |  Employee(name: str, social_security_nr: str, salary: int, role: str, employment_year: int)\n",
+      " |\n",
+      " |  Methods defined here:\n",
+      " |\n",
+      " |  __init__(self, name: str, social_security_nr: str, salary: int, role: str, employment_year: int)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |\n",
+      " |  __repr__(self)\n",
+      " |      Return repr(self).\n",
+      " |\n",
+      " |  __str__(self)\n",
+      " |      Return str(self).\n",
+      " |\n",
+      " |  increase_salary(self, value)\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Readonly properties defined here:\n",
+      " |\n",
+      " |  employment_year\n",
+      " |\n",
+      " |  name\n",
+      " |\n",
+      " |  role\n",
+      " |\n",
+      " |  social_security_nr\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |\n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables\n",
+      " |\n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object\n",
+      " |\n",
+      " |  salary\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(Employee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "102867a8",
    "metadata": {},
    "outputs": [],
    "source": []
