--- a/code_alongs/15_oop_polymorphism/oop_polymorphism.ipynb
+++ b/code_alongs/15_oop_polymorphism/oop_polymorphism.ipynb
@@ -9,6 +9,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9864e2bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a fish, my name is Fisky\n",
+      "fish Fisky says blub blub\n",
+      "I am a fish, my name is Goldy\n",
+      "fish Goldy says blub blub\n",
+      "I am a fox, my name is Ylvis\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Fish:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"I am a fish, my name is {self.name}\"\n",
+    "\n",
+    "    def speak(self):\n",
+    "        print(f\"fish {self.name} says blub blub\")\n",
+    "\n",
+    "class Fox:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"I am a fox, my name is {self.name}\"\n",
+    "\n",
+    "    def speak(self):\n",
+    "        return NotImplemented\n",
+    "\n",
+    "\n",
+    "animals = [Fish(\"Fisky\"), Fish(\"Goldy\"), Fox(\"Ylvis\")]\n",
+    "\n",
+    "for animal in animals:\n",
+    "    print(animal)\n",
+    "    animal.speak()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "537a0a90",
    "metadata": {},
@@ -16,8 +63,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
